# layout-rust

./: .gitignore  Cargo.toml  README.md  just-terminal.yaml  rustfmt.toml  sample-layout.json  sample-layout.yaml
Layout.app/Contents/: Info.plist
Layout.app/Contents/MacOS/: Layout
Layout.app/Contents/_CodeSignature/: CodeResources
scripts/: bump
src/: args.rs  dict_utils.rs  idref.rs  layout_types.rs  main.rs
